# pkgps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pkgps/: __init__.py  _exceptions.py  nvr.py
src/pkgps/extensions/: pydantic.py
tests/: test_nvr.py
tests/extensions/: test_pydantic.py
